Fix free license gurobi post

--- a/data/posts/vi/how-to-install-gurobi.mdx
+++ b/data/posts/vi/how-to-install-gurobi.mdx
@@ -24,7 +24,7 @@ học Tự nhiên.
 
   - Chọn `Review your current licenses` trong mục `Licences`
   ![binox-example](/posts/Gurobi/Gurobi2.png)
-  - Vào mục `Request` và chọn license bạn mong muốn. Nếu bạn là người mới bắt đầu hãy chọn `Named-User Academic`
+  - Vào mục `Request` và chọn license bạn mong muốn. Nếu bạn là người mới bắt đầu hãy chọn `Gurobi Limited Licence`
   ![binox-example](/posts/Gurobi/Gurobi3.png)
   - Vào mục `Licences` bạn sẽ nhìn thấy danh sách các license của mình
 
