Update post install gurobi

--- a/data/posts/vi/how-to-install-gurobi.mdx
+++ b/data/posts/vi/how-to-install-gurobi.mdx
@@ -13,7 +13,9 @@ Dành cho người mới tiếp xúc với solver [Gurobi](https://www.gurobi.co
 sinh viên học môn **Tối ưu hóa** khoa Toán - Cơ - Tin học trường Đại học Khoa
 học Tự nhiên.
 
-**Bước 1:** Tải xuống Gurobi tại đường [link](https://www.gurobi.com/downloads/gurobi-software/) và cài đặt.
+**Bước 1:** Tải xuống Gurobi tại đường [link](https://www.gurobi.com/downloads/gurobi-software/)
+(nhớ kéo xuống để thấy các file tải xuống) và cài đặt.
+![binox-example](/posts/Gurobi/Gurobi0.png)
 
 **Bước 2:** Đăng ký một tài khoản Gurobi
 
