--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
@@ -48,7 +48,7 @@ x(i, j, k) = \begin{cases}
 
 - Mỗi ô chứa một số
 ```math
-\sum\limits_{k = 1}^{n}{x(i, j, k)} \leq 1, \\ \forall 0 \leq i, j < n
+\sum\limits_{k = 1}^{n}{x(i, j, k)} = 1, \\ \forall 0 \leq i, j < n
 ```
 
 - Mỗi hàng chứa đủ các số từ 1 đến $n$
