Remove text-justify

--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
@@ -138,9 +138,8 @@ such constraints are often very difficult to model efficiently. Imagine if we
 had thousands of rows or columns; the number of constraints would be enormous.
 In such cases, we must find alternative ways to solve the problem effectively
 
-For more Binox puzzles and variations, please refer to [Krazydad/binox](https://krazydad.com/binox/).
-
-*The Python code for Binox modeling is available at
-[Tung-hehe/LogicPuzzlesSolver/binox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)*
+*For more Binox puzzles and variations, please refer to [Krazydad](https://krazydad.com/binox/).
+The Python code for Binox modeling is available at
+[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
