--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
@@ -125,9 +125,8 @@ a different effect but shares a common point: if not carefully considered, we ca
 easily overlook them. To avoid this situation, we need to think carefully about the
 problem and try solving different many cases to detect any issues (if any)
 
-For more Galaxies puzzles and variations, please refer to [Krazydad/galaxies](https://krazydad.com/galaxies/).
-
-*The Python code for Galaxies modeling is available at
-[Tung-hehe/LogicPuzzlesSolver/galaxies](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/galaxies.py).*
+*For more Galaxies puzzles and variations, please refer to [Krazydad](https://krazydad.com/galaxies/).
+The Python code for Galaxies modeling is available at
+[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/galaxies.py).*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
