--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
@@ -81,9 +81,8 @@ or maximize any value. Our goal is simply to find a feasible solution. Technical
 when programming, we can set the objective function to a constant (I often choose 0)
 
 ## 3. Conclusion
-For more Star Battle puzzles and variations, please refer to [Krazydad/start-battle](https://krazydad.com/starbattle/).
-
-*The Python code for Star Battle modeling is available at
-[Tung-hehe/LogicPuzzlesSolver/startBattle](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/starBattle.py).*
+*For more Star Battle puzzles and variations, please refer to [Krazydad](https://krazydad.com/starbattle/).
+The Python code for Star Battle modeling is available at
+[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/starBattle.py).*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
