--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
@@ -82,9 +82,8 @@ of the problem were modeled very easily with this variable assignment. This is a
 a common technique used in modeling, and we will encounter these binary variables
 again in future articles of this series.
 
-For more Sudoku puzzles and variations, please refer to [Krazydad/sudoku](https://krazydad.com/sudoku/).
-
-*The Python code for Sudoku modeling is available at
-[Tung-hehe/LogicPuzzlesSolver/sudoku](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)*
+*For more Sudoku puzzles and variations, please refer to [Krazydad](https://krazydad.com/sudoku/).
+The Python code for Sudoku modeling is available at
+[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
