--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
@@ -124,8 +124,7 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 đều có một điểm chung là nếu không để ý kỹ ta rất có thể sẽ bỏ qua chúng. Để tránh trường hợp này
 ta cần suy nghĩ kỹ về bài toán đồng thời thử giải nhiều trường hợp khác nhau để phát hiện ra vấn đề (nếu có).
 
-Tham khảo thêm các câu đố Galaxies và biến thể tại [Krazydad/galaxies](https://krazydad.com/galaxies/).
-
-*Code mô hình hóa Galaxies bằng python có tại [Tung-hehe/LogicPuzzlesSolver/galaxies](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/galaxies.py).*
+*Tham khảo thêm các câu đố Galaxies và biến thể tại [Krazydad](https://krazydad.com/galaxies/).
+Code mô hình hóa Galaxies bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/galaxies.py).*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
