--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
@@ -119,10 +119,8 @@ or maximize any value. Our goal is simply to find a feasible solution. Technical
 when programming, we can set the objective function to a constant (I often choose 0)
 
 ## 3. Conclusion
-For more Triox puzzles and variations, please refer to [Krazydad/triox](https://krazydad.com/troix/).
-Try modeling the variations of this puzzle!
-
-*The Python code for Star Battle modeling is available at
-[Tung-hehe/LogicPuzzlesSolver/sudoku](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
+*For more Triox puzzles and variations, please refer to [Krazydad](https://krazydad.com/troix/).
+The Python code for Star Battle modeling is available at
+[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
