--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
@@ -142,8 +142,7 @@ thường rất khó mô hình hóa một cách hiệu quả. Thử tưởng tư
 hàng/cột lên đến 1000 khi đó số điều kiện sẽ là một con số rất lớn, trong trường hợp đó ta phải
 tìm ra những cách khác để giải quyết bài toán một cách hiệu quả.
 
-Tham khảo thêm các câu đố Binox và biến thể tại [Krazydad/binox](https://krazydad.com/binox/).
-
-*Code mô hình hóa Binox bằng python có tại [Tung-hehe/LogicPuzzlesSolver/binox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)*
+*Tham khảo thêm các câu đố Binox và biến thể tại [Krazydad](https://krazydad.com/binox/).
+Code mô hình hóa Binox bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
