--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
@@ -119,9 +119,7 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 
 ## 3. Kết luận
 
-Tham khảo thêm các câu đố Triox và biến thể tại [Krazydad/triox](https://krazydad.com/troix/). Hãy thử mô
-hình hóa các biến thể của câu đố này nhé!
-
-*Code mô hình hóa Troix bằng python có tại [Tung-hehe/LogicPuzzlesSolver/triox](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
+*Tham khảo thêm các câu đố Triox và biến thể tại [Krazydad](https://krazydad.com/troix/).
+Code mô hình hóa Troix bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
