Fix typo in post install gurobi

--- a/data/posts/vi/how-to-install-gurobi.mdx
+++ b/data/posts/vi/how-to-install-gurobi.mdx
@@ -40,7 +40,7 @@ học Tự nhiên.
   ![binox-example](/posts/Gurobi/Gurobi6.png)
 
 **Bước 5:** Cài đặt `gurobipy`
-  Mở `Terminal` (`PowerShell` hoặc `Command Prompt` trên `Windows`) và chạy lệnh sau
+  mở `Terminal` (`PowerShell` hoặc `Command Prompt` trên `Windows`) và chạy lệnh sau
   ```terminal
   pip install gurobipy
   ```
