Add slitherling blog

--- a/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_binox.mdx
+++ b/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_binox.mdx
@@ -6,7 +6,7 @@ series:
   title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
 summary: Modeling and solving Binox puzzle using mixed-integer linear programming.
-image: /posts/Binox.png
+image: /posts/logic_puzzle_modeling/binox.png
 authors: [default]
 ---
 
@@ -22,7 +22,7 @@ Player needs to complete the grid by filling in the empty cells with $X$ or $O$,
 
 Below is an example of a 6×6 Binox puzzle and its solution.
 
-![binox-example](/posts/Binox.png)
+![binox_example](/posts/logic_puzzle_modeling/binox.png)
 
 ## 2. Modeling the puzzle
 - $n_R$ is the number of rows in the grid ($n_R$ is an even number)
@@ -140,6 +140,6 @@ In such cases, we must find alternative ways to solve the problem effectively
 
 *For more Binox puzzles and variations, please refer to [Krazydad](https://krazydad.com/binox/).
 The Python code for Binox modeling is available at
-[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/binox.py)*
+[Tung-hehe](https://github.com/Tung-hehe/logic-puzzles-solver/blob/main/src/puzzles/binox.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
