--- a/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_sudoku.mdx
+++ b/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_sudoku.mdx
@@ -6,7 +6,7 @@ series:
   title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
 summary: Modeling and solving Sudoku puzzle using mixed-integer linear programming.
-image: /posts/Sudoku.jpg
+image: /posts/logic_puzzle_modeling/sudoku.jpg
 authors: [default]
 ---
 
@@ -22,7 +22,7 @@ for a well-posed puzzle has a single solution.
 
 *Source [wikipedia](https://wikipedia.org/wiki/Sudoku)*
 
-![sudoku-example](/posts/Sudoku.jpg)
+![sudoku_example](/posts/logic_puzzle_modeling/sudoku.jpg)
 
 ## 2. Modeling the puzzle
 Some symbols used in this problem
@@ -84,6 +84,6 @@ again in future articles of this series.
 
 *For more Sudoku puzzles and variations, please refer to [Krazydad](https://krazydad.com/sudoku/).
 The Python code for Sudoku modeling is available at
-[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)*
+[Tung-hehe](https://github.com/Tung-hehe/logic-puzzles-solver/blob/main/src/puzzles/sudoku.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
