--- a/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_troix.mdx
+++ b/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_troix.mdx
@@ -6,7 +6,7 @@ series:
   title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
 summary: Modeling and solving Troix puzzle using mixed-integer linear programming.
-image: /posts/Troix.png
+image: /posts/logic_puzzle_modeling/troix.png
 authors: [default]
 ---
 
@@ -24,7 +24,7 @@ following constraints:
 
 Below is an example of a 12×12 Troix puzzle and its solution.
 
-![triox-example](/posts/Troix.png)
+![triox_example](/posts/logic_puzzle_modeling/troix.png)
 
 ## 2. Modeling puzzle
 
@@ -121,6 +121,6 @@ when programming, we can set the objective function to a constant (I often choos
 ## 3. Conclusion
 *For more Triox puzzles and variations, please refer to [Krazydad](https://krazydad.com/troix/).
 The Python code for Star Battle modeling is available at
-[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
+[Tung-hehe](https://github.com/Tung-hehe/logic-puzzles-solver/blob/main/src/puzzles/troix.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
