--- a/data/posts/en/modeling_tips_trick.mdx
+++ b/data/posts/en/modeling_tips_trick.mdx
@@ -35,7 +35,7 @@ $x = y \Leftrightarrow z = 1$ where $x, y, z$ are binary variables. We observe t
 feasible points are $(1, 1, 1), (0, 0, 1), (1, 0, 0), (0, 1, 0)$. Geometrically representing
 these points in three-dimensional space, we obtain the tetrahedron $ABCD$ shown below
 
-![modeling-tips-tricks](/posts/ModelingTipsTricks.png)
+![modeling_tips_tricks](/posts/modeling_tips_tricks.png)
 
 The points within the tetrahedron $ABCD$ are precisely those that satisfy the given condition.
 The equations defining this tetrahedron are the exact constraints needed to linearize the
