--- a/data/posts/vi/how_to_install_gurobi.mdx
+++ b/data/posts/vi/how_to_install_gurobi.mdx
@@ -15,29 +15,29 @@ học Tự nhiên.
 
 **Bước 1:** Tải xuống Gurobi tại đường [link](https://www.gurobi.com/downloads/gurobi-software/)
 (nhớ kéo xuống để thấy các file tải xuống) và cài đặt.
-![binox-example](/posts/Gurobi/Gurobi0.png)
+![gurobi_install](/posts/how_to_install_gurobi/gurobi_0.png)
 
 **Bước 2:** Đăng ký một tài khoản Gurobi
 
 **Bước 3:** Xin license Gurobi.
   - Đăng nhập vào [Gurobi](https://www.gurobi.com/)
   - Chọn `My account`
-  ![binox-example](/posts/Gurobi/Gurobi1.png)
+  ![gurobi_install](/posts/how_to_install_gurobi/gurobi_1.png)
 
   - Chọn `Review your current licenses` trong mục `Licences`
-  ![binox-example](/posts/Gurobi/Gurobi2.png)
+  ![gurobi_install](/posts/how_to_install_gurobi/gurobi_2.png)
   - Vào mục `Request` và chọn license bạn mong muốn. Nếu bạn là người mới bắt đầu hãy chọn `Gurobi Limited Licence`
-  ![binox-example](/posts/Gurobi/Gurobi3.png)
+  ![gurobi_install](/posts/how_to_install_gurobi/gurobi_3.png)
   - Vào mục `Licences` bạn sẽ nhìn thấy danh sách các license của mình
 
 **Bước 4:** Kích hoạt licence trên máy tính cá nhân
   - Tại mục `Licences` ở bước trên, chọn license mong muốn và nhần vào icon như dưới đây
-  ![binox-example](/posts/Gurobi/Gurobi4.png)
+  ![gurobi_install](/posts/how_to_install_gurobi/gurobi_4.png)
   - Copy dòng có dạng `grbgetkey [key]`
-  ![binox-example](/posts/Gurobi/Gurobi5.png)
+  ![gurobi_install](/posts/how_to_install_gurobi/gurobi_5.png)
   - Mở `Terminal` (`PowerShell` hoặc `Command Prompt` trên `Windows`) và chạy dòng trên, nếu nhận được
   kết quả dưới đây là đã cài đặt thành công
-  ![binox-example](/posts/Gurobi/Gurobi6.png)
+  ![gurobi_install](/posts/how_to_install_gurobi/gurobi_6.png)
 
 **Bước 5:** Cài đặt `gurobipy`
   mở `Terminal` (`PowerShell` hoặc `Command Prompt` trên `Windows`) và chạy lệnh sau
