--- a/data/posts/vi/logic_puzzle_modeling/logic_puzzle_modeling_sudoku.mdx
+++ b/data/posts/vi/logic_puzzle_modeling/logic_puzzle_modeling_sudoku.mdx
@@ -6,7 +6,7 @@ series:
   title: Mô hình hóa các câu đố logic
 tags: [modeling, math, MILP, programing, python]
 summary: Mô hình hóa và giải câu đố Sudoku bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
-image: /posts/Sudoku.jpg
+image: /posts/logic_puzzle_modeling/sudoku.jpg
 authors: [default]
 ---
 
@@ -22,7 +22,7 @@ bằng cách điền số vào những ô còn lại. Câu đố được thiế
 
 *Nguồn [wikipedia](https://vi.wikipedia.org/wiki/Sudoku)*
 
-![sudoku-example](/posts/Sudoku.jpg)
+![sudoku_example](/posts/logic_puzzle_modeling/sudoku.jpg)
 
 ## 2. Mô hình hóa câu đố
 
@@ -87,6 +87,6 @@ hay được sử dụng khi mô hình hóa, chúng ta sẽ còn gặp lại cá
 series.
 
 *Tham khảo thêm các câu đố Sudoku và biến thể tại [Krazydad](https://krazydad.com/sudoku/).
-Code mô hình hóa Sudoku bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/sudoku.py)*
+Code mô hình hóa Sudoku bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/logic-puzzles-solver/blob/main/src/puzzles/sudoku.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
