--- a/data/posts/vi/modeling_tips_trick.mdx
+++ b/data/posts/vi/modeling_tips_trick.mdx
@@ -33,7 +33,7 @@ cần mô hình hóa. Ví dụ tuyến tính hóa điều kiện $x = y \Leftrig
 Nhận thấy các bộ $(x, y, z)$ thỏa mãn điều kiện là $(1, 1, 1), (0, 0, 1), (1, 0, 0), (0, 1, 0)$. Biểu diễn trong
 không gian ba chiều ta được tứ diện $ABCD$ dưới đây
 
-![modeling-tips-tricks](/posts/ModelingTipsTricks.png)
+![modeling_tips_tricks](/posts/modeling_tips_tricks.png)
 
 Những điểm nằm trong tứ diện $ABCD$ chính là những điểm thỏa mãn điều kiện trên. Các phương
 trình biều diễn tứ diện này chính là các điều kiện cần để tuyến tính hóa điều kiện ban đầu,
