--- a/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_star_battle.mdx
+++ b/data/posts/en/logic_puzzle_modeling/logic_puzzle_modeling_star_battle.mdx
@@ -6,7 +6,7 @@ series:
   title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
 summary: Modeling and solving Star Battle puzzle using mixed-integer linear programming.
-image: /posts/StarBattle.png
+image: /posts/logic_puzzle_modeling/star_battle.png
 authors: [default]
 ---
 
@@ -20,7 +20,7 @@ players must fill the grid with stars that satisfy the following requirements:
 
 Below is an example of a 10x10 Star Battle puzzle, with 2 stars in each row, column, and region
 
-![star-battle-example](/posts/StarBattle.png)
+![star_battle_example](/posts/logic_puzzle_modeling/star_battle.png)
 
 ## 2. Modeling the puzzle
 Some symbols used in this problem
@@ -83,6 +83,6 @@ when programming, we can set the objective function to a constant (I often choos
 ## 3. Conclusion
 *For more Star Battle puzzles and variations, please refer to [Krazydad](https://krazydad.com/starbattle/).
 The Python code for Star Battle modeling is available at
-[Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/starBattle.py).*
+[Tung-hehe](https://github.com/Tung-hehe/logic-puzzles-solver/blob/main/src/puzzles/starBattle.py).*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
