--- a/data/posts/vi/logic_puzzle_modeling/logic_puzzle_modeling_star_battle.mdx
+++ b/data/posts/vi/logic_puzzle_modeling/logic_puzzle_modeling_star_battle.mdx
@@ -6,7 +6,7 @@ series:
   title: Mô hình hóa các câu đố logic
 tags: [modeling, math, MILP, programing, python]
 summary: Mô hình hóa và giải câu đố Star Battle bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
-image: /posts/StarBattle.png
+image: /posts/logic_puzzle_modeling/star_battle.png
 authors: [default]
 ---
 
@@ -22,7 +22,7 @@ yêu cầu dưới đây:
 
 Dưới đây là ví dụ cho một câu đố Star Battle cỡ 10×10, và 2 ngôi sao mỗi hàng, cột, khu vực
 
-![star-battle-example](/posts/StarBattle.png)
+![star_battle_example](/posts/logic_puzzle_modeling/star_battle.png)
 
 ## 2. Mô hình hóa câu đố
 
@@ -87,6 +87,6 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 ## 3. Kết luận
 
 *Tham khảo thêm các câu đố Star Battle và biến thể tại [Krazydad](https://krazydad.com/starbattle/).
-Code mô hình hóa Star Battle bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/starBattle.py).*
+Code mô hình hóa Star Battle bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/logic-puzzles-solver/blob/main/src/puzzles/starBattle.py).*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
