--- a/data/posts/vi/logic_puzzle_modeling/logic_puzzle_modeling_troix.mdx
+++ b/data/posts/vi/logic_puzzle_modeling/logic_puzzle_modeling_troix.mdx
@@ -6,7 +6,7 @@ series:
   title: Mô hình hóa các câu đố logic
 tags: [modeling, math, MILP, programing, python]
 summary: Mô hình hóa và giải câu đố Troix bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
-image: /posts/Troix.png
+image: /posts/logic_puzzle_modeling/troix.png
 authors: [default]
 ---
 
@@ -22,7 +22,7 @@ $X$, $O$ hoặc $I$. Người chơi cần hoàn thiện lưới bằng cách đi
 
 Dưới đây là ví dụ cho một câu đố Troix cỡ 12×12 và lời giải
 
-![triox-example](/posts/Troix.png)
+![triox_example](/posts/logic_puzzle_modeling/troix.png)
 
 ## 2. Mô hình hóa câu đố
 
@@ -120,6 +120,6 @@ mục tiêu là một hằng số (mình hay chọn số 0).
 ## 3. Kết luận
 
 *Tham khảo thêm các câu đố Triox và biến thể tại [Krazydad](https://krazydad.com/troix/).
-Code mô hình hóa Troix bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/LogicPuzzlesSolver/blob/main/src/puzzles/troix.py)*
+Code mô hình hóa Troix bằng python có tại [Tung-hehe](https://github.com/Tung-hehe/logic-puzzles-solver/blob/main/src/puzzles/troix.py)*
 
 Happly modeling! <Twemoji emoji="clinking-beer-mugs" />
