--- a/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
+++ b/data/posts/vi/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
@@ -106,7 +106,7 @@ kỳ, tồn tại ít nhất một vị trí $k$ sao cho $x(i, k) \ne x(j, k)$ .
   ```math
   \sum\limits_{k = 0}^{n_C - 1}{y(i, j, k)} \leq n_C - 1, \\ \forall 0 \leq i, j < n_R, i \ne j
   ```
-- Mỗi cột là duy nhất. Tương tự với điều kiện trên, với 2 cột $i \ne j$ bất kỳ, và mỗi hangd $k$,
+- Mỗi cột là duy nhất. Tương tự với điều kiện trên, với 2 cột $i \ne j$ bất kỳ, và mỗi hàng $k$,
 xây dựng biến trung gian $z(i, j, k)$ thỏa mãn
   ```math
   z(i, j, k) = \begin{cases}
